k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: restauranty
spec:
  replicas: 1
  selector: { matchLabels: { app: auth } }
  template:
    metadata: { labels: { app: auth } }
    spec:
      containers:
      - name: auth
        image: saief057/restauranty-auth:latest
        imagePullPolicy: IfNotPresent
        ports: [{ containerPort: 3001 }]
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: restauranty
spec:
  selector: { app: auth }
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  type: ClusterIP
