k8s/discounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts
  namespace: restauranty
spec:
  replicas: 1
  selector: { matchLabels: { app: discounts } }
  template:
    metadata: { labels: { app: discounts } }
    spec:
      containers:
      - name: discounts
        image: saief057/restauranty-discounts:latest
        imagePullPolicy: IfNotPresent
        ports: [{ containerPort: 3002 }]
---
apiVersion: v1
kind: Service
metadata:
  name: discounts
  namespace: restauranty
spec:
  selector: { app: discounts }
  ports:
  - name: http
    port: 3002
    targetPort: 3002
  type: ClusterIP
