k8s/items.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
  namespace: restauranty
spec:
  replicas: 1
  selector: { matchLabels: { app: items } }
  template:
    metadata: { labels: { app: items } }
    spec:
      containers:
      - name: items
        image: saief057/restauranty-items:latest
        imagePullPolicy: IfNotPresent
        ports: [{ containerPort: 3003 }]
---
apiVersion: v1
kind: Service
metadata:
  name: items
  namespace: restauranty
spec:
  selector: { app: items }
  ports:
  - name: http
    port: 3003
    targetPort: 3003
  type: ClusterIP
